--- a/index.html
+++ b/index.html
@@ -1,442 +1,323 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gustavo P. Maia — CV</title>
-  <meta name="description" content="Curriculum Vitae of Gustavo Pinho Maia — PhD student in Chemistry and Astrobiology.">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Gustavo P. Maia — CV</title>
+<meta name="description" content="Curriculum Vitae of Gustavo Pinho Maia — PhD student in Astrobiology.">
 
-  <!-- =====================
-       DESIGN SYSTEM
-  ====================== -->
-  <style>
-    :root{
-      /* Core palette */
-      --bg-main: #0b1020;
-      --bg-soft: #111831;
-      --bg-card: rgba(255,255,255,0.035);
-      --border-soft: rgba(255,255,255,0.08);
+<style>
+:root{
+  --bg:#0b1020;
+  --card:rgba(255,255,255,.04);
+  --border:rgba(255,255,255,.08);
+  --text:#e7edf6;
+  --muted:#9aa4b2;
+  --accent:#7dd3fc;
+  --accent-strong:#60a5fa;
 
-      /* Text */
-      --text-main: #e7edf6;
-      --text-muted: #9aa4b2;
-      --text-subtle: #c9d4e3;
+  --radius-lg:18px;
+  --radius-md:12px;
+  --shadow:0 10px 30px rgba(0,0,0,.6);
+  --max-width:1120px;
 
-      /* Accent */
-      --accent-main: #7dd3fc;
-      --accent-strong: #60a5fa;
-      --accent-dark: #0284c7;
+  color-scheme:dark;
+  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+}
 
-      /* Effects */
-      --radius-lg: 18px;
-      --radius-md: 12px;
-      --radius-sm: 8px;
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:linear-gradient(180deg,#070c1d,#0b1020 70%);
+  color:var(--text);
+  line-height:1.55;
+}
+a{color:var(--accent);text-decoration:none}
+a:hover{text-decoration:underline}
 
-      --shadow-soft: 0 10px 30px rgba(2,6,23,.6);
-      --shadow-accent: 0 12px 30px rgba(96,165,250,.18);
+.site{
+  max-width:var(--max-width);
+  margin:32px auto;
+  padding:20px;
+}
 
-      --max-width: 1120px;
+/* ================= HEADER ================= */
+.site-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:24px;
+  margin-bottom:32px;
+}
+.brand{
+  display:flex;
+  align-items:center;
+  gap:14px;
+}
+.logo{
+  width:56px;height:56px;
+  border-radius:14px;
+  background:linear-gradient(135deg,var(--accent),var(--accent-strong));
+  display:flex;align-items:center;justify-content:center;
+  font-weight:800;color:#03131e;
+}
+.brand-text .name{font-weight:700}
+.brand-text .position{font-size:13px;color:var(--muted)}
 
-      color-scheme: dark;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system,
-                   "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    }
+.nav{
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+.nav a{
+  padding:8px 12px;
+  font-size:14px;
+  color:var(--muted);
+  border-radius:8px;
+}
+.nav a:hover{background:var(--card);color:var(--text)}
+.nav a[aria-current]{background:var(--card);color:var(--accent)}
 
-    /* =====================
-       RESET & BASE
-    ====================== */
-    *{ box-sizing:border-box }
-    html,body{ height:100% }
-    body{
-      margin:0;
-      background:
-        radial-gradient(1200px 600px at 10% -10%, #14205a22, transparent),
-        linear-gradient(180deg, #070c1d, #0b1020 60%);
-      color:var(--text-main);
-      -webkit-font-smoothing: antialiased;
-      line-height:1.55;
-    }
+/* ================= HERO ================= */
+.hero{
+  background:linear-gradient(180deg,rgba(255,255,255,.04),transparent);
+  padding:24px;
+  border-radius:var(--radius-lg);
+}
+.hero-grid{
+  display:grid;
+  grid-template-columns:1fr 320px;
+  gap:24px;
+}
 
-    img{ max-width:100%; display:block }
+.profile{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius-lg);
+  padding:22px;
+  display:flex;
+  gap:22px;
+}
+.avatar{
+  width:120px;height:120px;
+  border-radius:14px;
+  background:linear-gradient(135deg,#0ea5a5,#60a5fa);
+  display:flex;align-items:center;justify-content:center;
+  font-weight:800;font-size:32px;color:#03131e;
+}
+.profile h1{margin:0 0 6px;font-size:26px}
+.profile-role{color:var(--muted);margin-bottom:12px}
 
-    a{
-      color:var(--accent-main);
-      text-decoration:none;
-    }
+.tags{display:flex;flex-wrap:wrap;gap:8px;margin:14px 0}
+.tag{
+  padding:6px 12px;
+  border-radius:999px;
+  background:rgba(255,255,255,.04);
+  border:1px solid var(--border);
+  font-size:13px;color:var(--muted);
+}
 
-    a:hover{ text-decoration:underline }
+/* ===== ICON LINKS ===== */
+.icon-links{
+  display:flex;
+  gap:12px;
+  margin-top:14px;
+}
+.icon-links a{
+  width:36px;height:36px;
+  border-radius:10px;
+  background:var(--card);
+  border:1px solid var(--border);
+  display:flex;align-items:center;justify-content:center;
+}
+.icon-links svg{width:18px;height:18px;fill:var(--accent)}
 
-    /* =====================
-       LAYOUT
-    ====================== */
-    .site{
-      max-width:var(--max-width);
-      margin:32px auto;
-      padding:20px;
-    }
+/* ================= SIDEBAR ================= */
+.sidebar{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius-md);
+  padding:18px;
+}
+.sidebar h4{margin-top:0}
 
-    /* =====================
-       HEADER
-    ====================== */
-    .site-header{
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap:24px;
-      margin-bottom:28px;
-    }
+/* ================= SECTIONS ================= */
+.section{
+  margin-top:36px;
+}
+.section h2{
+  margin-bottom:18px;
+  font-size:22px;
+}
 
-    .brand-link{
-      display:flex;
-      align-items:center;
-      gap:14px;
-      color:inherit;
-      text-decoration:none;
-    }
+.card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius-md);
+  padding:18px;
+  margin-bottom:16px;
+}
 
-    .logo{
-      width:56px;
-      height:56px;
-      border-radius:14px;
-      background:linear-gradient(135deg, var(--accent-main), var(--accent-strong));
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight:800;
-      color:#02131f;
-      box-shadow:var(--shadow-accent);
-      letter-spacing:.04em;
-    }
+.entry{
+  display:grid;
+  grid-template-columns:120px 1fr;
+  gap:16px;
+}
+.logo-box img{
+  width:100%;
+  max-height:60px;
+  object-fit:contain;
+  filter:grayscale(1) brightness(1.1);
+}
+.entry h3{margin:0 0 4px}
+.entry .meta{font-size:13px;color:var(--muted)}
+.entry p{margin:6px 0 0}
 
-    .brand-text .name{
-      font-weight:700;
-      font-size:18px;
-    }
-
-    .brand-text .position{
-      font-size:13px;
-      color:var(--text-muted);
-      margin-top:2px;
-    }
-
-    .main-nav{
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-    }
-
-    .nav-item{
-      padding:8px 12px;
-      font-size:14px;
-      color:var(--text-muted);
-      border-radius:var(--radius-sm);
-    }
-
-    .nav-item:hover{
-      background:var(--bg-card);
-      color:var(--text-main);
-      text-decoration:none;
-    }
-
-    .nav-item[aria-current="page"]{
-      background:var(--bg-card);
-      color:var(--accent-main);
-    }
-
-    /* =====================
-       HERO
-    ====================== */
-    .hero{
-      background:linear-gradient(
-        180deg,
-        rgba(255,255,255,.04),
-        rgba(255,255,255,.01)
-      );
-      padding:24px;
-      border-radius:var(--radius-lg);
-    }
-
-    .hero-inner{
-      display:grid;
-      grid-template-columns: 1fr 320px;
-      gap:24px;
-      align-items:start;
-    }
-
-    .profile-card{
-      display:flex;
-      gap:22px;
-      background:var(--bg-card);
-      padding:22px;
-      border-radius:var(--radius-lg);
-      box-shadow:var(--shadow-soft);
-      border:1px solid var(--border-soft);
-    }
-
-    .media{
-      min-width:120px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:14px;
-    }
-
-    .avatar{
-      width:120px;
-      height:120px;
-      border-radius:14px;
-      object-fit:cover;
-      box-shadow:var(--shadow-soft);
-      background:
-        linear-gradient(135deg, #0ea5a5, #60a5fa);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight:800;
-      color:#03131e;
-      font-size:32px;
-    }
-
-    .profile-body h1{
-      margin:0 0 6px;
-      font-size:26px;
-    }
-
-    .profile-role{
-      margin:0 0 14px;
-      color:var(--text-muted);
-      font-size:15px;
-    }
-
-    .intro{
-      margin:0 0 14px;
-      color:var(--text-subtle);
-    }
-
-    .tags{
-      display:flex;
-      flex-wrap:wrap;
-      gap:8px;
-      margin-bottom:16px;
-    }
-
-    .tag{
-      padding:6px 12px;
-      border-radius:999px;
-      background:rgba(255,255,255,.04);
-      font-size:13px;
-      color:var(--text-muted);
-      border:1px solid var(--border-soft);
-    }
-
-    .actions{
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
-    }
-
-    .btn{
-      padding:10px 16px;
-      border-radius:10px;
-      font-weight:600;
-      font-size:14px;
-      display:inline-flex;
-      align-items:center;
-      gap:6px;
-    }
-
-    .btn-primary{
-      background:linear-gradient(90deg, var(--accent-main), var(--accent-strong));
-      color:#02131f;
-      box-shadow:var(--shadow-accent);
-    }
-
-    .btn-outline{
-      border:1px solid var(--border-soft);
-      color:var(--accent-main);
-      background:transparent;
-    }
-
-    .btn-ghost{
-      color:var(--text-muted);
-    }
-
-    /* =====================
-       SIDEBAR
-    ====================== */
-    .profile-meta{
-      background:var(--bg-card);
-      padding:18px;
-      border-radius:var(--radius-md);
-      border:1px solid var(--border-soft);
-    }
-
-    .profile-meta h4{
-      margin:0 0 8px;
-    }
-
-    .profile-meta ul{
-      padding-left:18px;
-      margin:6px 0 0;
-    }
-
-    /* =====================
-       SECTIONS
-    ====================== */
-    .sections{
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(260px,1fr));
-      gap:18px;
-      margin-top:24px;
-    }
-
-    .card{
-      background:var(--bg-card);
-      padding:18px;
-      border-radius:var(--radius-md);
-      border:1px solid var(--border-soft);
-    }
-
-    .card h3{
-      margin-top:0;
-    }
-
-    .muted{
-      color:var(--text-muted);
-    }
-
-    /* =====================
-       RESPONSIVE
-    ====================== */
-    @media (max-width: 900px){
-      .hero-inner{
-        grid-template-columns:1fr;
-      }
-    }
-
-    @media (max-width: 520px){
-      .profile-card{
-        flex-direction:column;
-        align-items:center;
-        text-align:center;
-      }
-      .actions{
-        justify-content:center;
-      }
-    }
-
-    /* =====================
-       PRINT
-    ====================== */
-    @media print{
-      body{
-        background:white;
-        color:black;
-      }
-      .site-header,
-      .actions{
-        display:none;
-      }
-    }
-  </style>
+/* ================= RESPONSIVE ================= */
+@media(max-width:900px){
+  .hero-grid{grid-template-columns:1fr}
+}
+@media(max-width:520px){
+  .profile{flex-direction:column;text-align:center}
+  .entry{grid-template-columns:1fr}
+}
+</style>
 </head>
 
 <body>
-  <div class="site">
+<div class="site">
 
-    <!-- HEADER -->
-    <header class="site-header">
-      <a class="brand-link" href="index_en.html">
-        <div class="logo">GM</div>
-        <div class="brand-text">
-          <div class="name">Gustavo P. Maia</div>
-          <div class="position">PhD Student — Astrobiology</div>
+<!-- HEADER -->
+<header class="site-header">
+  <div class="brand">
+    <div class="logo">GM</div>
+    <div class="brand-text">
+      <div class="name">Gustavo P. Maia</div>
+      <div class="position">PhD Student — Astrobiology</div>
+    </div>
+  </div>
+
+  <nav class="nav">
+    <a aria-current="page">Home</a>
+    <a href="education_en.html">Education</a>
+    <a href="research_en.html">Research</a>
+    <a href="publications_en.html">Publications</a>
+    <a href="contact_en.html">Contact</a>
+  </nav>
+</header>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-grid">
+
+    <article class="profile">
+      <div class="avatar">GM</div>
+      <div>
+        <h1>Gustavo Pinho Maia</h1>
+        <div class="profile-role">
+          PhD student in Chemistry (Astrobiology) — University of Lisbon
         </div>
-      </a>
 
-      <nav class="main-nav">
-        <a class="nav-item" aria-current="page">Home</a>
-        <a class="nav-item" href="about_en.html">About</a>
-        <a class="nav-item" href="education_en.html">Education</a>
-        <a class="nav-item" href="research_en.html">Research</a>
-        <a class="nav-item" href="publications_en.html">Publications</a>
-        <a class="nav-item" href="contact_en.html">Contact</a>
-      </nav>
-    </header>
+        <p>
+          Research on mechanochemical and shock-driven synthesis of
+          organic molecules relevant to the origin of life, combining
+          meteoritics, prebiotic chemistry and experimental astrobiology.
+        </p>
 
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
+        <div class="tags">
+          <span class="tag">Astrobiology</span>
+          <span class="tag">Mechanochemistry</span>
+          <span class="tag">Meteoritics</span>
+          <span class="tag">Prebiotic Chemistry</span>
+        </div>
 
-        <article class="profile-card">
-          <div class="media">
-            <div class="avatar">GM</div>
-          </div>
-
-          <div class="profile-body">
-            <h1>Gustavo Pinho Maia</h1>
-            <p class="profile-role">
-              PhD student in Chemistry (Astrobiology) — University of Lisbon
-            </p>
-
-            <p class="intro">
-              I study how mechanical and shock energies drive the synthesis
-              and transformation of organic molecules relevant to the
-              origins of life, combining mechanochemistry, meteoritics
-              and prebiotic chemistry.
-            </p>
-
-            <div class="tags">
-              <span class="tag">Astrobiology</span>
-              <span class="tag">Mechanochemistry</span>
-              <span class="tag">Meteoritics</span>
-              <span class="tag">Prebiotic Chemistry</span>
-            </div>
-
-            <div class="actions">
-              <a class="btn btn-primary" href="assets/Gustavo_Maia_CV_EN.pdf" target="_blank">Download CV</a>
-              <a class="btn btn-outline" href="publications_en.html">Publications</a>
-              <a class="btn btn-ghost" href="contact_en.html">Contact</a>
-            </div>
-          </div>
-        </article>
-
-        <aside class="profile-meta">
-          <h4>Quick links</h4>
-          <ul>
-            <li><a href="https://orcid.org/0000-0001-5314-8816" target="_blank">ORCID</a></li>
-            <li><a href="https://cienciavitae.pt/" target="_blank">CiênciaVitae</a></li>
-          </ul>
-        </aside>
-
+        <!-- ICON LINKS -->
+        <div class="icon-links">
+          <!-- ORCID -->
+          <a href="https://orcid.org/0000-0001-5314-8816" target="_blank" aria-label="ORCID">
+            <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+          </a>
+          <!-- LinkedIn -->
+          <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+            <svg viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20"/></svg>
+          </a>
+          <!-- ResearchGate -->
+          <a href="https://www.researchgate.net/" target="_blank" aria-label="ResearchGate">
+            <svg viewBox="0 0 24 24"><path d="M12 2L22 22H2z"/></svg>
+          </a>
+          <!-- Email -->
+          <a href="mailto:your.email@domain.com" aria-label="Email">
+            <svg viewBox="0 0 24 24"><path d="M2 4h20v16H2z"/></svg>
+          </a>
+        </div>
       </div>
-    </section>
+    </article>
 
-    <!-- SECTIONS -->
-    <section class="sections">
-      <article class="card">
-        <h3>Recent publications</h3>
-        <p class="muted">
-          Peer-reviewed articles, preprints and selected conference papers.
-        </p>
-      </article>
-
-      <article class="card">
-        <h3>Research summary</h3>
-        <p class="muted">
-          Experimental studies on energy-driven molecular complexity under
-          astrophysical and planetary conditions.
-        </p>
-      </article>
-
-      <article class="card">
-        <h3>Conferences & talks</h3>
-        <p class="muted">
-          Selected invited talks and poster presentations.
-        </p>
-      </article>
-    </section>
+    <aside class="sidebar">
+      <h4>Affiliations</h4>
+      <p class="meta">University of Lisbon — IST</p>
+      <p class="meta">MNHN (France)</p>
+      <p class="meta">NASA Goddard (USA)</p>
+    </aside>
 
   </div>
+</section>
+
+<!-- EDUCATION -->
+<section class="section">
+<h2>Education</h2>
+
+<div class="card entry">
+  <div class="logo-box"><img src="images/logos/ist.png" alt="IST"></div>
+  <div>
+    <h3>PhD in Chemistry — Astrobiology</h3>
+    <div class="meta">2023/12/01 – 2027/12/01 · Ongoing</div>
+    <p>Universidade de Lisboa — Instituto Superior Técnico<br>
+    <em>Mechanochemical energy and prebiotic synthesis</em></p>
+  </div>
+</div>
+
+<div class="card entry">
+  <div class="logo-box"><img src="images/logos/ist.png" alt="IST"></div>
+  <div>
+    <h3>MSc in Chemistry</h3>
+    <div class="meta">2020/09 – 2022/12 · Concluded</div>
+    <p><em>Ribonucleoside stability and prebiotic synthesis</em></p>
+  </div>
+</div>
+
+<div class="card entry">
+  <div class="logo-box"><img src="images/logos/ubi.png" alt="UBI"></div>
+  <div>
+    <h3>BSc in Industrial Chemistry</h3>
+    <div class="meta">2017/09 – 2020/09</div>
+  </div>
+</div>
+
+</section>
+
+<!-- EXPERIENCE -->
+<section class="section">
+<h2>Affiliations & Experience</h2>
+
+<div class="card entry">
+  <div class="logo-box"><img src="images/logos/nasa.png" alt="NASA"></div>
+  <div>
+    <h3>Visiting Scientist</h3>
+    <div class="meta">NASA Goddard Space Flight Center · 2024</div>
+  </div>
+</div>
+
+<div class="card entry">
+  <div class="logo-box"><img src="images/logos/mnhn.png" alt="MNHN"></div>
+  <div>
+    <h3>Visiting Scientist</h3>
+    <div class="meta">Muséum National d’Histoire Naturelle · 2025–Current</div>
+  </div>
+</div>
+
+</section>
+
+</div>
 </body>
 </html>
