--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gustavo P. Maia — CV</title>
+
+<title>Gustavo P. Maia — Academic CV</title>
+<meta name="description" content="Gustavo P. Maia — PhD student in Astrobiology. Research, education, publications, and contact.">
 
 <style>
 :root{
@@ -14,14 +16,12 @@
   --muted:#9aa4b2;
   --accent:#7dd3fc;
   --accent-strong:#60a5fa;
-
   --radius-lg:18px;
   --radius-md:12px;
   --shadow:0 10px 30px rgba(0,0,0,.6);
   --max-width:1120px;
-
-  color-scheme:dark;
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  color-scheme:dark;
 }
 
 *{box-sizing:border-box}
@@ -37,13 +37,14 @@ body{
 }
 a{color:var(--accent);text-decoration:none}
 a:hover{text-decoration:underline}
+h2{margin:0 0 20px 0}
 
 /* ================= HERO ================= */
 .hero{
   background:linear-gradient(180deg,rgba(255,255,255,.04),transparent);
   padding:24px;
   border-radius:var(--radius-lg);
-  margin-bottom:48px;
+  margin-bottom:56px;
 }
 .hero-card{
   display:flex;
@@ -66,12 +67,29 @@ a:hover{text-decoration:underline}
   display:flex;align-items:center;justify-content:center;
   font-weight:800;font-size:32px;color:#03131e;
 }
-.role{color:var(--muted);margin-bottom:12px}
+.role{color:var(--muted);margin-bottom:10px}
+
+/* ================= SOCIAL LINKS ================= */
+.social-links{
+  display:flex;
+  gap:12px;
+  margin-top:12px;
+  flex-wrap:wrap;
+}
+.social-links a{
+  display:flex;
+  align-items:center;
+  gap:8px;
+  padding:8px 12px;
+  border-radius:10px;
+  background:rgba(255,255,255,.04);
+  font-weight:600;
+}
+
+/* ================= SECTIONS ================= */
+.section{margin-bottom:64px}
 
 /* ================= TIMELINE ================= */
-.section{margin-bottom:56px}
-.section h2{margin-bottom:20px}
-
 .timeline{
   position:relative;
   padding-left:36px;
@@ -88,23 +106,19 @@ a:hover{text-decoration:underline}
 .timeline-item{
   position:relative;
   margin-bottom:32px;
-
-  /* Animation initial state */
   opacity:0;
   transform:translateY(24px);
-  transition:
-    opacity .6s ease,
-    transform .6s ease;
+  transition:opacity .6s ease, transform .6s ease;
 }
 .timeline-item.visible{
   opacity:1;
-  transform:translateY(0);
+  transform:none;
 }
 .timeline-item::before{
   content:"";
   position:absolute;
   left:-26px;
-  top:8px;
+  top:10px;
   width:14px;
   height:14px;
   border-radius:50%;
@@ -125,11 +139,6 @@ a:hover{text-decoration:underline}
   width:48px;
   height:48px;
   object-fit:contain;
-  opacity:.95;
-  transition:transform .2s ease;
-}
-.timeline-card:hover img{
-  transform:scale(1.05);
 }
 .meta{font-size:13px;color:var(--muted)}
 .timeline-card p{margin:8px 0 0}
@@ -144,23 +153,65 @@ a:hover{text-decoration:underline}
 }
 .pub-title{font-weight:600}
 .pub-meta{font-size:13px;color:var(--muted)}
-.pub a{font-size:13px}
+
+/* ================= CONTACT ================= */
+.contact-grid{
+  display:grid;
+  grid-template-columns:1fr 380px;
+  gap:20px;
+}
+@media(max-width:900px){
+  .contact-grid{grid-template-columns:1fr}
+}
+
+.card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:var(--radius-md);
+  padding:18px;
+}
+.contact-item{
+  display:flex;
+  gap:12px;
+  align-items:center;
+  margin-bottom:12px;
+}
+.contact-item strong{font-weight:600}
+.btn{
+  display:inline-flex;
+  align-items:center;
+  gap:8px;
+  padding:8px 12px;
+  border-radius:10px;
+  background:linear-gradient(90deg,var(--accent),var(--accent-strong));
+  color:#04203a;
+  border:none;
+  cursor:pointer;
+  font-weight:600;
+}
+.btn.ghost{
+  background:transparent;
+  border:1px solid var(--border);
+  color:var(--accent);
+}
+
+form input, form textarea{
+  width:100%;
+  padding:10px;
+  border-radius:10px;
+  border:1px solid var(--border);
+  background:transparent;
+  color:inherit;
+}
+form textarea{min-height:120px}
 
 /* ================= REDUCED MOTION ================= */
 @media (prefers-reduced-motion: reduce){
-  .timeline-item{
-    opacity:1;
-    transform:none;
-    transition:none;
-  }
+  .timeline-item{opacity:1;transform:none;transition:none}
 }
 
 @media(max-width:700px){
-  .hero-card{
-    flex-direction:column;
-    align-items:center;
-    text-align:center;
-  }
+  .hero-card{flex-direction:column;align-items:center;text-align:center}
 }
 </style>
 </head>
@@ -178,15 +229,32 @@ a:hover{text-decoration:underline}
 
     <div>
       <h1>Gustavo Pinho Maia</h1>
-      <div class="role">
-        PhD student in Chemistry (Astrobiology) — University of Lisbon
-      </div>
+      <div class="role">PhD student in Chemistry (Astrobiology)</div>
       <p>
-        Research on mechanochemical and shock-driven synthesis of organic
-        molecules relevant to the origin of life.
+        Research on mechanochemical and shock-driven synthesis of organic molecules
+        relevant to prebiotic chemistry and the origin of life.
       </p>
+
+      <div class="social-links">
+        <a href="https://orcid.org/0000-0001-5314-8816" target="_blank">ORCID</a>
+        <a href="https://www.linkedin.com/in/gustavopinhomaia" target="_blank">LinkedIn</a>
+        <a href="https://www.researchgate.net/profile/Gustavo_Maia2" target="_blank">ResearchGate</a>
+        <a href="mailto:gustavopinho.maia@mnhn.fr">Email</a>
+      </div>
     </div>
   </div>
+</section>
+
+<!-- RESEARCH -->
+<section class="section">
+<h2>Research Interests</h2>
+<div class="card">
+  <p class="meta">
+    Mechanochemical energy and prebiotic synthesis; mechanochemical reactivity of ribonucleosides;
+    shock-induced transformation and degradation of organic molecules in extraterrestrial materials;
+    analytical approaches to organic matter in meteorites.
+  </p>
+</div>
 </section>
 
 <!-- EDUCATION -->
@@ -199,8 +267,8 @@ a:hover{text-decoration:underline}
     <div class="timeline-header">
       <img src="images/logos/ist.png" alt="IST">
       <div>
-        <strong>PhD in Chemistry — Astrobiology</strong>
-        <div class="meta">2023–2027 · Ongoing · Universidade de Lisboa</div>
+        <strong>PhD in Chemistry (Astrobiology)</strong>
+        <div class="meta">2023–2027 · Ongoing · Universidade de Lisboa — Instituto Superior Técnico</div>
       </div>
     </div>
     <p><em>Mechanochemical energy and prebiotic synthesis</em></p>
@@ -213,10 +281,23 @@ a:hover{text-decoration:underline}
       <img src="images/logos/ist.png" alt="IST">
       <div>
         <strong>MSc in Chemistry</strong>
-        <div class="meta">2020–2022 · Concluded</div>
+        <div class="meta">2020–2022 · Concluded · Instituto Superior Técnico</div>
       </div>
     </div>
     <p><em>Ribonucleoside stability and prebiotic synthesis</em></p>
+  </div>
+</div>
+
+<div class="timeline-item">
+  <div class="timeline-card">
+    <div class="timeline-header">
+      <img src="images/logos/ubi.png" alt="UBI">
+      <div>
+        <strong>BSc in Industrial Chemistry</strong>
+        <div class="meta">2017–2020 · Universidade da Beira Interior</div>
+      </div>
+    </div>
+    <p><em>Optimization of quinoline N-oxide synthesis</em></p>
   </div>
 </div>
 
@@ -229,52 +310,107 @@ a:hover{text-decoration:underline}
 <div id="pub-list"></div>
 </section>
 
+<!-- CONTACT -->
+<section class="section">
+<h2>Contact</h2>
+<div class="contact-grid">
+
+<div class="card">
+  <div class="contact-item">
+    <strong>Email:</strong> <span id="emailValue">gustavopinho.maia@mnhn.fr</span>
+  </div>
+
+  <div style="display:flex;gap:10px;margin-bottom:16px">
+    <button class="btn" id="copyEmailBtn">Copy email</button>
+    <a class="btn ghost" id="downloadVcard" download="gustavo_maia.vcf">Download vCard</a>
+  </div>
+
+  <form id="contactForm" onsubmit="return handleContact(event)">
+    <input id="name" placeholder="Your name" required>
+    <input id="email" type="email" placeholder="Your email" required>
+    <input id="subject" placeholder="Subject" required>
+    <textarea id="message" placeholder="Message" required></textarea>
+    <div style="margin-top:10px;display:flex;gap:10px">
+      <button class="btn" type="submit">Send</button>
+      <button class="btn ghost" type="button" onclick="this.form.reset()">Clear</button>
+    </div>
+  </form>
 </div>
 
-<!-- ================= TIMELINE ANIMATION ================= -->
+<div class="card">
+  <strong>Profiles</strong>
+  <p class="meta">
+    Full academic record, appointments, and addresses are available via CiênciaVitae and ORCID.
+  </p>
+</div>
+
+</div>
+</section>
+
+</div>
+
+<!-- ================= SCRIPTS ================= -->
 <script>
-const observer = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if(entry.isIntersecting){
-      entry.target.classList.add("visible");
-      observer.unobserve(entry.target);
+// Timeline animation
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting){
+      e.target.classList.add("visible");
+      observer.unobserve(e.target);
     }
   });
 },{threshold:0.2});
+document.querySelectorAll(".timeline-item").forEach(i=>observer.observe(i));
 
-document.querySelectorAll(".timeline-item").forEach(item=>{
-  observer.observe(item);
-});
-</script>
-
-<!-- ================= BIBTEX + DOI PARSER ================= -->
-<script>
+// BibTeX + DOI
 fetch("publications.bib")
-  .then(r=>r.text())
-  .then(text=>{
-    const entries=text.split("@").slice(1);
-    const container=document.getElementById("pub-list");
-
-    entries.forEach(e=>{
-      const title=(e.match(/title\s*=\s*[{"]([^}"]+)/i)||[])[1];
-      const author=(e.match(/author\s*=\s*[{"]([^}"]+)/i)||[])[1];
-      const year=(e.match(/year\s*=\s*[{"]([^}"]+)/i)||[])[1];
-      const doi=(e.match(/doi\s*=\s*[{"]([^}"]+)/i)||[])[1];
-
-      if(!title) return;
-
-      const div=document.createElement("div");
-      div.className="pub";
-      div.innerHTML=`
-        <div class="pub-title">${title}</div>
-        <div class="pub-meta">
-          ${author || ""}${year ? " · "+year : ""}
-        </div>
-        ${doi ? `<a href="https://doi.org/${doi}" target="_blank">DOI: ${doi}</a>` : ""}
-      `;
-      container.appendChild(div);
-    });
+.then(r=>r.text())
+.then(text=>{
+  const entries=text.split("@").slice(1);
+  const c=document.getElementById("pub-list");
+  entries.forEach(e=>{
+    const t=(e.match(/title\s*=\s*[{"]([^}"]+)/i)||[])[1];
+    const a=(e.match(/author\s*=\s*[{"]([^}"]+)/i)||[])[1];
+    const y=(e.match(/year\s*=\s*[{"]([^}"]+)/i)||[])[1];
+    const d=(e.match(/doi\s*=\s*[{"]([^}"]+)/i)||[])[1];
+    if(!t) return;
+    c.innerHTML+=`
+      <div class="pub">
+        <div class="pub-title">${t}</div>
+        <div class="pub-meta">${a||""}${y?" · "+y:""}</div>
+        ${d?`<a href="https://doi.org/${d}" target="_blank">DOI: ${d}</a>`:""}
+      </div>`;
   });
+});
+
+// vCard
+(function(){
+  const vcard=[
+    'BEGIN:VCARD','VERSION:3.0',
+    'FN:Gustavo P. Maia',
+    'EMAIL:gustavopinho.maia@mnhn.fr',
+    'URL:https://orcid.org/0000-0001-5314-8816',
+    'END:VCARD'
+  ].join('\r\n');
+  document.getElementById('downloadVcard').href=
+    'data:text/vcard;charset=utf-8,'+encodeURIComponent(vcard);
+})();
+
+// Copy email
+document.getElementById('copyEmailBtn').onclick=async()=>{
+  await navigator.clipboard.writeText(
+    document.getElementById('emailValue').textContent
+  );
+};
+
+// Contact form
+function handleContact(e){
+  e.preventDefault();
+  const s=encodeURIComponent(subject.value);
+  const b=encodeURIComponent(message.value);
+  location.href=`mailto:gustavopinho.maia@mnhn.fr?subject=${s}&body=${b}`;
+  return false;
+}
 </script>
 
 </body>
