--- a/index.html
+++ b/index.html
@@ -239,7 +239,6 @@ form textarea{min-height:120px}
         <a href="https://orcid.org/0000-0001-5314-8816" target="_blank">ORCID</a>
         <a href="https://www.linkedin.com/in/gustavopinhomaia" target="_blank">LinkedIn</a>
         <a href="https://www.researchgate.net/profile/Gustavo_Maia2" target="_blank">ResearchGate</a>
-        <a href="mailto:gustavopinho.maia@mnhn.fr">Email</a>
       </div>
     </div>
   </div>
@@ -317,7 +316,7 @@ form textarea{min-height:120px}
 
 <div class="card">
   <div class="contact-item">
-    <strong>Email:</strong> <span id="emailValue">gustavopinho.maia@mnhn.fr</span>
+    <strong>Email:</strong> <span id="emailValue">gustavopinho.maia(at)mnhn.fr</span>
   </div>
 
   <div style="display:flex;gap:10px;margin-bottom:16px">
@@ -388,7 +387,7 @@ fetch("publications.bib")
   const vcard=[
     'BEGIN:VCARD','VERSION:3.0',
     'FN:Gustavo P. Maia',
-    'EMAIL:gustavopinho.maia@mnhn.fr',
+    'EMAIL:gustavopinho.maia(at)mnhn.fr',
     'URL:https://orcid.org/0000-0001-5314-8816',
     'END:VCARD'
   ].join('\r\n');
