--- a/index.html
+++ b/index.html
@@ -235,11 +235,44 @@ form textarea{min-height:120px}
         relevant to prebiotic chemistry and the origin of life.
       </p>
 
-      <div class="social-links">
-        <a href="https://orcid.org/0000-0001-5314-8816" target="_blank">ORCID</a>
-        <a href="https://www.linkedin.com/in/gustavopinhomaia" target="_blank">LinkedIn</a>
-        <a href="https://www.researchgate.net/profile/Gustavo_Maia2" target="_blank">ResearchGate</a>
-      </div>
+      
+	<div class="social-links">
+	  <a href="https://orcid.org/0000-0001-5314-8816" target="_blank" rel="noopener noreferrer">
+		<img
+		  src="images/logos/orcid.png"
+		  alt=""
+		  width="20" height="20"
+		  class="icon"
+		  loading="lazy"
+		  referrerpolicy="no-referrer"
+		/>
+		<span class="label">ORCID</span>
+	  </a>
+
+	  <a href="https://www.linkedin.com/in/gustavopinhomaia" target="_blank" rel="noopener noreferrer">
+		<img
+		  src="images/logos/linkedin.png"
+		  alt=""
+		  width="20" height="20"
+		  class="icon"
+		  loading="lazy"
+		  referrerpolicy="no-referrer"
+		/>
+		<span class="label">LinkedIn</span>
+	  </a>
+
+	  <a href="https://www.researchgate.net/profile/Gustavo_Maia2" target="_blank" rel="noopener noreferrer">
+		<img
+		  src="images/logos/researchgate.png"
+		  alt=""
+		  width="20" height="20"
+		  class="icon"
+		  loading="lazy"
+		  referrerpolicy="no-referrer"
+		/>
+		<span class="label">ResearchGate</span>
+	  </a>
+	</div>
     </div>
   </div>
 </section>
