--- a/index.html
+++ b/index.html
@@ -336,6 +336,147 @@ form textarea{min-height:120px}
 </div>
 </section>
 
+<!-- EXPERIENCE -->
+<section class="section">
+<h2>Experience</h2>
+<div class="timeline">
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ist.png" alt="IST">
+        <div>
+          <strong>Invited Assistant (University Teacher)</strong>
+          <div class="meta">Sep 2024 – Oct 2024 · Universidade de Lisboa — Instituto Superior Técnico, Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="UBI">
+        <div>
+          <strong>Delegate of Industrial Chemistry Students (Pedagogical Council)</strong>
+          <div class="meta">Oct 2019 – Sep 2020 · Universidade da Beira Interior, Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/mnhn.png" alt="MNHN">
+        <div>
+          <strong>Visiting Scientist</strong>
+          <div class="meta">Jan 2025 – Present · Muséum National d’Histoire Naturelle — IMPMC, France</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/nasa.png" alt="NASA">
+        <div>
+          <strong>Visiting Scientist</strong>
+          <div class="meta">Nov 2024 – Dec 2024 · NASA Goddard Space Flight Center, USA</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/aneq.png" alt="ANEQ">
+        <div>
+          <strong>President of the Fiscal Council</strong>
+          <div class="meta">Jun 2021 – May 2022 · National Association of Chemistry Students (ANEQ), Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/aneq.png" alt="ANEQ">
+        <div>
+          <strong>Vice President</strong>
+          <div class="meta">Jun 2020 – Jun 2021 · National Association of Chemistry Students (ANEQ), Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="UBI">
+        <div>
+          <strong>Vice-President — UBIQUÍMICA</strong>
+          <div class="meta">Sep 2019 – Dec 2020 · University of Beira Interior, Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="UBI">
+        <div>
+          <strong>Research Intern</strong>
+          <div class="meta">Jul 2020 – Sep 2020 · Universidade da Beira Interior, Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/nestle.png" alt="Nestlé">
+        <div>
+          <strong>Factory Worker</strong>
+          <div class="meta">Aug 2019 – Sep 2019 · Nestlé Portugal S.A. (via Randstad)</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ubi.png" alt="UBI">
+        <div>
+          <strong>Member of the Scientific Committee — UBIQUÍMICA</strong>
+          <div class="meta">Aug 2018 – Aug 2019 · University of Beira Interior, Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-card">
+      <div class="timeline-header">
+        <img src="images/logos/ramada.png" alt="Ramada Aços">
+        <div>
+          <strong>Professional Internship</strong>
+          <div class="meta">Jun 2014 – Jul 2014 · Ramada Aços, S.A., Portugal</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+</section>
+
+
 <!-- PUBLICATIONS -->
 <section class="section">
 <h2>Publications</h2>
