--- a/index.html
+++ b/index.html
@@ -277,6 +277,37 @@ form textarea{min-height:120px}
   </div>
 </section>
 
+<!-- ABOUT ME -->
+<section class="section">
+  <h2>About Me</h2>
+  <div class="card">
+    <p>
+      I am a Ph.D. student and researcher at the Centro de Química Estrutural (CQE),
+      working in collaboration with the Institut de Minéralogie, de Physique des Matériaux
+      et de Cosmochimie (IMPMC) at the Muséum National d’Histoire Naturelle (MNHN) and
+      with NASA’s Goddard Space Flight Center (NASA-GSFC) on projects in prebiotic
+      chemistry and astrobiology.
+    </p>
+    <p>
+      My research investigates the chemical origins and early evolution of life in the universe,
+      using chemistry to uncover the processes and mechanisms that may have led to life’s emergence.
+      A central theme of my work is mechanochemistry—the study of chemical reactions driven
+      by mechanical forces. I explore how mechanical energy, such as that generated during
+      parent-body formation, asteroid gardening, or meteorite impacts, can promote the
+      synthesis and transformation of organic molecules under conditions relevant to the early
+      Earth and other planetary bodies.
+    </p>
+    <p>
+      By reproducing and characterizing mechanically activated reactions and their products,
+      I investigate alternative pathways for prebiotic chemistry and assess the potential
+      role of mechanical activation in driving chemical complexity in extraterrestrial or
+      extreme environments.
+    </p>
+  </div>
+</section>
+
+
+
 <!-- RESEARCH -->
 <section class="section">
 <h2>Research Interests</h2>
