--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ form textarea{min-height:120px}
   <div class="timeline-item">
     <div class="timeline-card">
       <div class="timeline-header">
-        <img src="images/logos/mnhn.png" alt="MNHN">
+        <img class="logo-white"	src="images/logos/mnhn.png" alt="MNHN">
         <div>
           <strong>Visiting Scientist</strong>
           <div class="meta">Jan 2025 – Present · Muséum National d’Histoire Naturelle — IMPMC, France</div>
