--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   --max-width:1120px;
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   color-scheme:dark;
+  
+  .keywords { display:flex; flex-wrap:wrap; gap:10px; }
+.keyword {
+  background: #7dd3fc;
+  color: #04203a;
+  padding: 6px 12px;
+  border-radius: 10px;
+  font-weight: 600;
+}
+
 }
 
 *{box-sizing:border-box}
@@ -90,46 +100,52 @@ h2{margin:0 0 20px 0}
 .section{margin-bottom:64px}
 
 /* ================= TIMELINE ================= */
-.timeline{
-  position:relative;
-  padding-left:36px;
+.timeline {
+  position: relative;
+  padding-left: 0; /* remove old padding */
 }
-.timeline::before{
-  content:"";
-  position:absolute;
-  left:12px;
-  top:0;
-  bottom:0;
-  width:2px;
-  background:rgba(255,255,255,.15);
+
+.timeline::before {
+  content: "";
+  position: absolute;
+  left: 32px; /* center bullets relative to cards */
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background: rgba(255, 255, 255, 0.15);
 }
-.timeline-item{
-  position:relative;
-  margin-bottom:32px;
-  opacity:0;
-  transform:translateY(24px);
-  transition:opacity .6s ease, transform .6s ease;
+
+.timeline-item {
+  position: relative;
+  display: flex;           /* flex for vertical alignment */
+  align-items: center;     /* vertically center card with bullet */
+  margin-bottom: 40px;     /* spacing between items */
+  opacity: 0;
+  transform: translateY(24px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
 }
-.timeline-item.visible{
-  opacity:1;
-  transform:none;
+
+.timeline-item.visible {
+  opacity: 1;
+  transform: none;
 }
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-26px;
-  top:10px;
-  width:14px;
-  height:14px;
-  border-radius:50%;
-  background:var(--accent);
+
+.timeline-item::before {
+  content: "";
+  position: absolute;
+  left: 32px;              /* same as line */
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: var(--accent);
+  transform: translateX(-50%); /* center dot horizontally */
 }
-.timeline-card{
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:var(--radius-md);
-  padding:16px;
+
+.timeline-card {
+  margin-left: 64px;       /* distance from line */
+  flex: 1;
 }
+
 .timeline-header{
   display:flex;
   align-items:center;
@@ -311,13 +327,18 @@ form textarea{min-height:120px}
 <!-- RESEARCH -->
 <section class="section">
 <h2>Research Interests</h2>
-<div class="card">
-  <p class="meta">
-    Mechanochemical energy and prebiotic synthesis; mechanochemical reactivity of ribonucleosides;
-    shock-induced transformation and degradation of organic molecules in extraterrestrial materials;
-    analytical approaches to organic matter in meteorites.
-  </p>
+<div class="card" style="background:#e0f2ff;"> <!-- softer blue -->
+  <div class="keywords">
+    <span class="keyword">Mechanochemical Energy</span>
+    <span class="keyword">Prebiotic Synthesis</span>
+    <span class="keyword">Ribonucleoside Reactivity</span>
+    <span class="keyword">Shock-Induced Transformation</span>
+    <span class="keyword">Organic Molecules in Meteorites</span>
+    <span class="keyword">Astrobiology</span>
+    <span class="keyword">Analytical Chemistry</span>
+  </div>
 </div>
+
 </section>
 
 <!-- EDUCATION -->
