--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ form textarea{min-height:120px}
 <!-- RESEARCH -->
 <section class="section">
 <h2>Research Interests</h2>
-<div class="card" style="background:#e0f2ff;"> <!-- softer blue -->
+<div class="card"> <!-- softer blue -->
   <div class="keywords">
     <span class="keyword">Mechanochemical Energy</span>
     <span class="keyword">Prebiotic Synthesis</span>
